# bulb

./: .gitignore  Cargo.toml  PLAN.md  README.md
benchmarks/: compression_bench.sh  run.sh
benchmarks/data/: large.pkg.tar.bz3  large.pkg.tar.zst  medium.pkg.tar.bz3  small.pkg.tar.bz3
benchmarks/results/: bench_20260618_005553.md  bench_20260618_005623.md  bench_20260618_005719.md  bench_20260618_010242.md  bench_20260618_010351.md  bench_20260618_011006.md  bench_20260618_172350.md  compression_bench_20260618_172824.md
bulb-delta/: Cargo.toml
bulb-delta/src/: main.rs
docs/: development.md  package-format.md
src/: aur.rs  commands.rs  conflict.rs  delta.rs  download.rs  error.rs  hooks.rs  journal.rs  lib.rs  lock.rs  main.rs  pgp.rs  pipeline.rs  pkginfo.rs  resolver.rs  sandbox.rs  sync.rs
src/config/: mod.rs  pacman_conf.rs
src/core/: arch.rs  dependency.rs  mod.rs  pkginfo.rs  version.rs
src/daemon/: cache.rs  handlers.rs  ipc.rs  mod.rs
src/db/: installed.rs  migrate_from_alpm.rs  mod.rs  schema.rs  store.rs  transaction.rs
src/format/: aur.rs  mod.rs
src/format/alpm/: buildinfo.rs  convert.rs  desc.rs  install_script.rs  local_db.rs  mod.rs  mtree.rs  pkgfile.rs  pkginfo.rs  sync_db.rs
src/format/native/: manifest.rs  package.rs
src/tui/: mod.rs  multi_select.rs  search.rs  widgets.rs
src/util/: fs.rs  shell.rs
