[package]
name = "bulb"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
bzip3 = { version = "0.12", features = ["bundled"] }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
flate2 = { version = "1.0", features = ["zlib-rs"] }
memmap2 = "0.9"
rayon = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "zstd", "stream"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.14"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util"] }
toml = "0.8"
walkdir = "2.5"
zstd = "0.13"
