[package]
name = "bulb"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[[bin]]
name = "bulbd"
path = "src/bin/bulbd.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
bsdiff = "0.2"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
crossterm = "0.28"
flate2 = { version = "1.0", features = ["zlib-rs"] }
futures-util = "0.3"
libc = "0.2"
memmap2 = "0.9"
nucleo = "0.5"
ratatui = "0.29"
rayon = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "zstd", "stream"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.14"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net", "signal"] }
toml = "0.8"
walkdir = "2.5"
zstd = "0.13"
urlencoding = "2"
