[package]
name = "bulb-delta"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"
description = "Fast delta generator for bulb package manager"

[[bin]]
name = "bulb-delta"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
bsdiff = "0.2"
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
